kubernetes/frontend-react/Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-react
spec:
  selector:
    app: frontend-react
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
