kubernetes/frontend-react/IngressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-react
  namespace: provedcode
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`localhost`)
      services:
        - kind: Service
          name: frontend-react
          port: 8080
          scheme: http
